--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "@vercel/analytics": "^1.3.1"
+  },
+  "devDependencies": {
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard": "^36.0.1"
   }
 }
