--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,9 @@
-{ "extends": ["stylelint-config-standard"] }
+{ 
+  "extends": ["stylelint-config-standard"],
+  "rules": {
+    "selector-class-pattern": null,
+    "color-function-notation": null,
+    "alpha-value-notation": null,
+    "media-feature-range-notation": null
+  }
+}
